--- a/random defect model.ipynb
+++ b/random defect model.ipynb
@@ -21,8 +21,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-17T05:59:31.868007Z",
-     "start_time": "2024-07-17T05:59:23.987086Z"
+     "end_time": "2024-07-17T07:45:35.854293Z",
+     "start_time": "2024-07-17T07:45:35.826280Z"
     }
    },
    "cell_type": "code",
@@ -77,7 +77,7 @@
     "        pair_counts = np.sum([len(e) for e in d])\n",
     "        return (pair_counts, len(self.dopant))\n",
     "\n",
-    "    def plot(self, ax=None):\n",
+    "    def plot(self, ax=None, **kwargs):\n",
     "        if ax is None:\n",
     "            fig, ax = plt.subplots(1, 1, figsize=(7.2, 7.2))\n",
     "        s = 3\n",
@@ -89,13 +89,13 @@
    ],
    "id": "5cd51bf35a0ec1b3",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-17T05:59:40.325709Z",
-     "start_time": "2024-07-17T05:59:38.676755Z"
+     "end_time": "2024-07-17T07:45:37.159743Z",
+     "start_time": "2024-07-17T07:45:36.221770Z"
     }
    },
    "cell_type": "code",
@@ -115,15 +115,15 @@
     {
      "data": {
       "text/plain": [
-       "(169, 734)"
+       "(166, 734)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 5
   },
   {
    "metadata": {},
