--- a/random defect model.ipynb
+++ b/random defect model.ipynb
@@ -266,15 +266,69 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T06:27:50.429869Z",
-     "start_time": "2024-07-19T06:27:50.410870Z"
+     "end_time": "2024-07-19T07:09:50.918126Z",
+     "start_time": "2024-07-19T07:09:50.896128Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "pts_vac = model.vac[:, 0:2]\n",
+    "pts_dopant = model.dopant[:, 0:2]"
+   ],
    "id": "d87840b440d847f",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 29
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-19T07:10:14.615773Z",
+     "start_time": "2024-07-19T07:10:14.511796Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(7.2, 7.2))\n",
+    "ax.scatter(pts_vac[:, 0], pts_vac[:, 1], color='r', s=10)"
+   ],
+   "id": "b4f14262dec4e3a2",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.PathCollection at 0x246a1d80520>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 31
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-19T07:10:48.913833Z",
+     "start_time": "2024-07-19T07:10:48.885835Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "1009/model.area",
+   "id": "2c63d8b28df8da19",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004499450562013817"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 34
   },
   {
    "metadata": {},
@@ -282,7 +336,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "b4f14262dec4e3a2"
+   "id": "cb76156a1ebe1b74"
   }
  ],
  "metadata": {
