Update stack and process.ipynb

--- a/process/combine pts and lbs/stack and process.ipynb
+++ b/process/combine pts and lbs/stack and process.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-08T13:58:49.840921Z",
-     "start_time": "2024-08-08T13:58:49.824974Z"
+     "end_time": "2024-08-09T14:25:32.139853Z",
+     "start_time": "2024-08-09T14:25:32.118594Z"
     }
    },
    "source": [
@@ -16,10 +16,12 @@
     "%matplotlib qt\n",
     "from mtflearn.io import load_image\n",
     "from stemplot import imshow, colors_from_lbs\n",
-    "import re"
+    "from mtflearn.features import ZPs, get_characteristic_length, local_max, KeyPoints\n",
+    "import re\n",
+    "from skimage.transform import resize"
    ],
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 45
   },
   {
    "metadata": {},
@@ -30,8 +32,47 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-08T14:19:19.887660Z",
-     "start_time": "2024-08-08T14:19:19.873708Z"
+     "end_time": "2024-08-09T14:30:19.113610Z",
+     "start_time": "2024-08-09T14:30:19.093675Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "size_dict = {\n",
+    "            'Ti':{'1028_ADF1_2':9,'1028_ADF1_11':8,'1028_ADF1_25':9,'0106_ADF1_1':17,'0106_ADF1_6':17,'0106_ADF1_8':18,'0106_ADF1_10':18,'0106_ADF1_11':21,'0106_ADF1_12':21},\n",
+    "            'V':{'E1_ADF1_3':14,'E1_ADF1_8':18,'E2_ADF1_3':19,'E2_ADF1_4':18,'E2_ADF1_5':14,'E2_ADF1_6':17,'E2_ADF1_7':17,'E2_ADF1_8':18,'E2_ADF1_14':26},\n",
+    "            'Mn':{'ADF1_2':22,'ADF1_4':18,'ADF1_7':18,'ADF1_12':22,'ADF1_18':21},\n",
+    "            'Co':{'ADF1_5':18,'ADF1_8':15,'ADF1_9':15,'ADF1_18':14,'ADF1_27':17,'ADF1_10':18,'ADF1_11':18}\n",
+    "            }"
+   ],
+   "id": "c80734460b1c52b2",
+   "outputs": [],
+   "execution_count": 56
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-09T13:55:01.119815Z",
+     "start_time": "2024-08-09T13:55:01.103131Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "pattern = r'^\\d{4}$|^[Ee]\\d$'\n",
+    "\n",
+    "# 使用 re.match 来尝试匹配字符串\n",
+    "if re.match(pattern, 'V5'):\n",
+    "    print(1)"
+   ],
+   "id": "9836d1abf974071",
+   "outputs": [],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-09T14:20:55.576582Z",
+     "start_time": "2024-08-09T14:20:55.552545Z"
     }
    },
    "cell_type": "code",
@@ -60,32 +101,6 @@
     "        elif \"lbs\" in file_name and \"pts\" not in file_name:\n",
     "            lbs_files.append(file)\n",
     "    return pts_files, lbs_files\n",
-    "\n",
-    "def find_matching_images(lbs_filenames, image_filenames):\n",
-    "    matching_images = []\n",
-    "    for lbs_file in lbs_filenames:\n",
-    "        # 去除路径信息\n",
-    "        file_name = lbs_file.split('\\\\')[-1]\n",
-    "\n",
-    "        # 检查文件名是否以数字或 \"E\" 开头\n",
-    "        if re.match(r'^[0-9E]', file_name):\n",
-    "            # 提取第一个下划线前的部分\n",
-    "            base_name = file_name.split('_')[0]\n",
-    "        else:\n",
-    "            base_name = file_name\n",
-    "\n",
-    "        # 查找 \"Ti\", \"V\", \"Mn\", \"Co\" 中的一个，并提取其后的数字\n",
-    "        match = re.search(r'(Ti|V|Mn|Co)(\\d+)', file_name)\n",
-    "        if match:\n",
-    "            element = match.group(1)\n",
-    "            number = match.group(2)\n",
-    "            pattern = f'{base_name}_{element}{number}'\n",
-    "\n",
-    "            # 在 image_filenames 中查找匹配项\n",
-    "            for img_file in image_filenames:\n",
-    "                if pattern in img_file:\n",
-    "                    matching_images.append((lbs_file, img_file))\n",
-    "                    break\n",
     "                    \n",
     "def find_matching_images(lbs_filenames,pts_filenames, adf1_filenames,adf2_filenames):\n",
     "    matching_images = []\n",
@@ -97,33 +112,40 @@
     "        file_name = lbs_file.split('\\\\')[-1]\n",
     "        if re.match(r'^[0-9E]', file_name):\n",
     "            base_name = file_name.split('_')[0]\n",
+    "            if base_name[0] == 'E':\n",
+    "                base_name = base_name.split(' ')[0]\n",
     "        else:\n",
     "            base_name = ''\n",
     "        match = re.search(r'(Ti|V|Mn|Co)(\\d+)', file_name)\n",
     "        if match:\n",
+    "            element = match.group(1)\n",
     "            number = match.group(2)\n",
     "            number = number+'.dm4'\n",
     "            for idx2,img_file in enumerate(adf1_filenames):\n",
     "                if base_name and (base_name in img_file and number in img_file):\n",
     "                    files.append(img_file)\n",
     "                    files.append(adf2_filenames[idx2])\n",
+    "                    file_name = (img_file.split('\\\\')[1]).split('.')[0]\n",
+    "                    files.append(size_dict[element][file_name])\n",
     "                    break\n",
     "                elif not base_name and number in img_file:\n",
     "                    files.append(img_file)\n",
     "                    files.append(adf2_filenames[idx2])\n",
+    "                    file_name = (img_file.split('\\\\')[1]).split('.')[0]\n",
+    "                    files.append(size_dict[element][file_name])\n",
     "                    break\n",
     "        matching_images.append(files)\n",
     "    return matching_images"
    ],
    "id": "74a7270984f2d8ab",
    "outputs": [],
-   "execution_count": 52
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-08T14:21:22.097187Z",
-     "start_time": "2024-08-08T14:21:22.078243Z"
+     "end_time": "2024-08-09T14:28:25.285771Z",
+     "start_time": "2024-08-09T14:28:25.270820Z"
     }
    },
    "cell_type": "code",
@@ -134,13 +156,52 @@
    ],
    "id": "2e7c619ecc51a16",
    "outputs": [],
-   "execution_count": 55
+   "execution_count": 52
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-08T14:22:17.715972Z",
-     "start_time": "2024-08-08T14:22:17.703015Z"
+     "end_time": "2024-08-09T14:28:35.372794Z",
+     "start_time": "2024-08-09T14:28:25.829094Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for info in Ti_pair_files:\n",
+    "    _,_,img1_file,img2_file,size = info\n",
+    "    img1 = load_image(img1_file)\n",
+    "    img2 = load_image(img2_file)\n",
+    "    file_name = (img1_file.split('\\\\')[1]).split('.')[0]\n",
+    "    if img1.shape[0] == 2048:\n",
+    "        img1 = resize(img1, (1024, 1024))\n",
+    "        img2 = resize(img2, (1024, 1024))\n",
+    "    print(file_name,get_characteristic_length(img1),get_characteristic_length(img2),size)"
+   ],
+   "id": "a9274bd9fdef84da",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0106_ADF1_10 18 18 18\n",
+      "0106_ADF1_11 21 21 21\n",
+      "0106_ADF1_12 21 21 21\n",
+      "0106_ADF1_1 17 17 17\n",
+      "0106_ADF1_6 17 17 17\n",
+      "0106_ADF1_8 18 18 18\n",
+      "1028_ADF1_11 8 8 8\n",
+      "1028_ADF1_25 9 8 9\n",
+      "1028_ADF1_2 9 9 9\n"
+     ]
+    }
+   ],
+   "execution_count": 53
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-09T14:30:22.499872Z",
+     "start_time": "2024-08-09T14:30:22.479156Z"
     }
    },
    "cell_type": "code",
@@ -156,8 +217,47 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-08T14:22:40.634492Z",
-     "start_time": "2024-08-08T14:22:40.625522Z"
+     "end_time": "2024-08-09T14:30:29.659404Z",
+     "start_time": "2024-08-09T14:30:22.631163Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for info in V_pair_files:\n",
+    "    _,_,img1_file,img2_file,size = info\n",
+    "    img1 = load_image(img1_file)\n",
+    "    img2 = load_image(img2_file)\n",
+    "    file_name = (img1_file.split('\\\\')[1]).split('.')[0]\n",
+    "    if img1.shape[0] == 2048:\n",
+    "        img1 = resize(img1, (1024, 1024))\n",
+    "        img2 = resize(img2, (1024, 1024))\n",
+    "    print(file_name,get_characteristic_length(img1),get_characteristic_length(img2),size)"
+   ],
+   "id": "cb07da25310b78b5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E1_ADF1_3 14 14 14\n",
+      "E1_ADF1_8 18 18 18\n",
+      "E2_ADF1_14 26 26 26\n",
+      "E2_ADF1_3 18 18 19\n",
+      "E2_ADF1_14 26 26 26\n",
+      "E2_ADF1_5 14 14 14\n",
+      "E2_ADF1_6 17 17 17\n",
+      "E2_ADF1_7 17 17 17\n",
+      "E2_ADF1_8 17 17 18\n"
+     ]
+    }
+   ],
+   "execution_count": 58
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-09T14:21:42.841956Z",
+     "start_time": "2024-08-09T14:21:42.830987Z"
     }
    },
    "cell_type": "code",
@@ -168,13 +268,48 @@
    ],
    "id": "90a177f1406052b8",
    "outputs": [],
-   "execution_count": 58
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-08T14:23:07.993549Z",
-     "start_time": "2024-08-08T14:23:07.975608Z"
+     "end_time": "2024-08-09T14:30:59.596874Z",
+     "start_time": "2024-08-09T14:30:55.590363Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for info in Mn_pair_files:\n",
+    "    _,_,img1_file,img2_file,size = info\n",
+    "    img1 = load_image(img1_file)\n",
+    "    img2 = load_image(img2_file)\n",
+    "    file_name = (img1_file.split('\\\\')[1]).split('.')[0]\n",
+    "    if img1.shape[0] == 2048:\n",
+    "        img1 = resize(img1, (1024, 1024))\n",
+    "        img2 = resize(img2, (1024, 1024))\n",
+    "    print(file_name,get_characteristic_length(img1),get_characteristic_length(img2),size)"
+   ],
+   "id": "4a746f0af3844d34",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADF1_12 21 21 22\n",
+      "ADF1_18 21 21 21\n",
+      "ADF1_12 21 21 22\n",
+      "ADF1_4 17 17 18\n",
+      "ADF1_7 17 17 18\n"
+     ]
+    }
+   ],
+   "execution_count": 59
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-09T14:21:43.194807Z",
+     "start_time": "2024-08-09T14:21:43.186834Z"
     }
    },
    "cell_type": "code",
@@ -185,7 +320,44 @@
    ],
    "id": "99f70dcb486bb04c",
    "outputs": [],
-   "execution_count": 59
+   "execution_count": 42
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-09T14:31:20.412227Z",
+     "start_time": "2024-08-09T14:31:13.663919Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for info in Co_pair_files:\n",
+    "    _,_,img1_file,img2_file,size = info\n",
+    "    img1 = load_image(img1_file)\n",
+    "    img2 = load_image(img2_file)\n",
+    "    file_name = (img1_file.split('\\\\')[1]).split('.')[0]\n",
+    "    if img1.shape[0] == 2048:\n",
+    "        img1 = resize(img1, (1024, 1024))\n",
+    "        img2 = resize(img2, (1024, 1024))\n",
+    "    print(file_name,get_characteristic_length(img1),get_characteristic_length(img2),size)"
+   ],
+   "id": "1725f085b08ffc29",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADF1_10 18 18 18\n",
+      "ADF1_11 18 18 18\n",
+      "ADF1_18 14 14 14\n",
+      "ADF1_27 17 17 17\n",
+      "ADF1_5 18 18 18\n",
+      "ADF1_18 14 14 14\n",
+      "ADF1_9 15 15 15\n"
+     ]
+    }
+   ],
+   "execution_count": 60
   },
   {
    "metadata": {},
@@ -193,7 +365,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "4a73304e346a38ba"
+   "id": "52006d2b26c2efe2"
   }
  ],
  "metadata": {
