upload new notebook
do not use remove_bg

--- a/process/combine pts and lbs/combine Ti pts and lbs.ipynb
+++ b/process/combine pts and lbs/combine Ti pts and lbs.ipynb
@@ -32,6 +32,32 @@
    "id": "128ee1a333fbe115"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-08T12:53:12.792029Z",
+     "start_time": "2024-08-08T12:53:12.778029Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "34f0768ce74e112d",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-08T12:53:29.029060Z",
+     "start_time": "2024-08-08T12:53:29.019060Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "c8b387ad42b0655e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
@@ -43,9 +69,36 @@
     "    pts = \n",
     "    lbs = \n",
     "    \n",
-    "    # get features and stack"
+    "    # get features and stack\n",
+    "\n",
+    "    \n",
+    "    kp = KeyPoints(pts, img, size)\n",
+    "    ps = kp.extract_patches(size)\n",
+    "\n",
+    "    zps = ZPs(n_max=10, size=ps.shape[1])\n",
+    "    zps.fit(ps)\n",
+    "    X = zps.moments\n",
+    "    X_rot = X.rotinv() \n",
+    "        \n",
+    "    X1 \n",
+    "    #X1 = process_func(X1)\n",
+    "    \n",
+    "    \n"
    ],
    "id": "17400ad66b8cf5fd"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-08T12:54:07.908455Z",
+     "start_time": "2024-08-08T12:54:07.890454Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "# this cell is for ",
+   "id": "2335629f66ea02ed",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -53,7 +106,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "2335629f66ea02ed"
+   "id": "c957db4b0c10bfbb"
   }
  ],
  "metadata": {
