--- a/process/combine pts and lbs/process Ti.ipynb
+++ b/process/combine pts and lbs/process Ti.ipynb
@@ -6,23 +6,23 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-14T02:26:40.636923Z",
-     "start_time": "2024-08-14T02:26:40.615903Z"
+     "end_time": "2024-08-15T09:38:53.516362Z",
+     "start_time": "2024-08-15T09:38:49.724951Z"
     }
    },
    "source": [
     "%matplotlib qt\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt "
+    "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 78
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T02:26:41.107376Z",
-     "start_time": "2024-08-14T02:26:41.091377Z"
+     "end_time": "2024-08-15T09:39:07.641991Z",
+     "start_time": "2024-08-15T09:38:54.886267Z"
     }
    },
    "cell_type": "code",
@@ -41,13 +41,13 @@
    ],
    "id": "e73f82ff32d1f11c",
    "outputs": [],
-   "execution_count": 79
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T02:26:41.577428Z",
-     "start_time": "2024-08-14T02:26:41.539426Z"
+     "end_time": "2024-08-15T09:39:09.382530Z",
+     "start_time": "2024-08-15T09:39:09.351505Z"
     }
    },
    "cell_type": "code",
@@ -127,13 +127,13 @@
    ],
    "id": "4c8e42c441c1a89f",
    "outputs": [],
-   "execution_count": 80
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T02:26:42.062630Z",
-     "start_time": "2024-08-14T02:26:42.050629Z"
+     "end_time": "2024-08-15T09:39:34.739396Z",
+     "start_time": "2024-08-15T09:39:34.713415Z"
     }
    },
    "cell_type": "code",
@@ -141,22 +141,35 @@
     "element = 'Ti'\n",
     "img1_filenames, img2_filenames = find_imgs(element)\n",
     "pts_filenames, lbs_filenames = find_pts_and_lbs(element)\n",
-    "matched_filenames = find_matching_images(lbs_filenames,pts_filenames, img1_filenames,img2_filenames)"
+    "matched_filenames = find_matching_images(lbs_filenames,pts_filenames, img1_filenames,img2_filenames)\n",
+    "\n",
+    "len(matched_filenames)"
    ],
    "id": "25b588be40987619",
-   "outputs": [],
-   "execution_count": 81
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T02:26:43.974933Z",
-     "start_time": "2024-08-14T02:26:42.817359Z"
+     "end_time": "2024-08-15T09:39:40.944168Z",
+     "start_time": "2024-08-15T09:39:39.733368Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "file_idx = 5\n",
+    "file_idx = 0\n",
     "lbs_filename, pts_filename, img1_filename, img2_filename, size = matched_filenames[file_idx]\n",
     "img1 = load_image(img1_filename)\n",
     "img2 = load_image(img2_filename)\n",
@@ -181,13 +194,13 @@
    ],
    "id": "316a37f57066e054",
    "outputs": [],
-   "execution_count": 82
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T02:26:45.595745Z",
-     "start_time": "2024-08-14T02:26:45.516583Z"
+     "end_time": "2024-08-15T09:39:43.318316Z",
+     "start_time": "2024-08-15T09:39:43.245338Z"
     }
    },
    "cell_type": "code",
@@ -197,13 +210,13 @@
    ],
    "id": "ae0d8939d028c80b",
    "outputs": [],
-   "execution_count": 83
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T02:26:48.372271Z",
-     "start_time": "2024-08-14T02:26:48.280830Z"
+     "end_time": "2024-08-15T09:39:45.166835Z",
+     "start_time": "2024-08-15T09:39:45.077836Z"
     }
    },
    "cell_type": "code",
@@ -221,39 +234,39 @@
    ],
    "id": "8a370fde934fa38c",
    "outputs": [],
-   "execution_count": 84
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T02:26:48.776613Z",
-     "start_time": "2024-08-14T02:26:48.644617Z"
+     "end_time": "2024-08-15T09:39:47.462046Z",
+     "start_time": "2024-08-15T09:39:46.629523Z"
     }
    },
    "cell_type": "code",
    "source": "plot_pca(X1, 2, lbs=lbs1)",
    "id": "33e60e14318e26ec",
    "outputs": [],
-   "execution_count": 85
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T02:26:50.045214Z",
-     "start_time": "2024-08-14T02:26:49.924216Z"
+     "end_time": "2024-08-15T09:39:51.702284Z",
+     "start_time": "2024-08-15T09:39:51.573287Z"
     }
    },
    "cell_type": "code",
    "source": "plot_pca(X2, 2, lbs=lbs2)",
    "id": "57ee886233e14ef2",
    "outputs": [],
-   "execution_count": 86
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T02:26:59.119155Z",
-     "start_time": "2024-08-14T02:26:59.095156Z"
+     "end_time": "2024-08-15T09:40:03.099397Z",
+     "start_time": "2024-08-15T09:40:03.062398Z"
     }
    },
    "cell_type": "code",
@@ -287,7 +300,7 @@
    ],
    "id": "b857a7cf38b8deaf",
    "outputs": [],
-   "execution_count": 87
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -342,8 +355,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-15T09:30:11.248972Z",
-     "start_time": "2024-08-15T09:30:08.454560Z"
+     "end_time": "2024-08-15T09:40:11.994438Z",
+     "start_time": "2024-08-15T09:40:06.950864Z"
     }
    },
    "cell_type": "code",
@@ -372,7 +385,20 @@
      ]
     }
    ],
-   "execution_count": 113
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-15T09:40:16.708539Z",
+     "start_time": "2024-08-15T09:40:16.525562Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "app1 = interactive_clusters(xy, img2, pts[mask1], ps[mask1], lbs=lbs1, s=1, max_samples=10000)",
+   "id": "5d71f1215dc987e1",
+   "outputs": [],
+   "execution_count": 13
   },
   {
    "metadata": {
